fix bash location

--- a/dotfiles/tmux-3.5a/.tmux.conf
+++ b/dotfiles/tmux-3.5a/.tmux.conf
@@ -65,10 +65,7 @@ set -g visual-silence off
 set -g word-separators " "
 
 # set shell options
-# Ubuntu:
-# set -g default-shell /usr/bin/bash
-# Debian:
-set -g default-shell /bin/bash
+set -g default-shell /usr/bin/env bash
 
 # set the color for the terminal features
 set -g default-terminal "tmux-256color"
