--- a/dotfiles/tmux-3.5a/.tmux.conf
+++ b/dotfiles/tmux-3.5a/.tmux.conf
@@ -65,7 +65,7 @@ set -g visual-silence off
 set -g word-separators " "
 
 # set shell options
-set -g default-shell /usr/bin/env bash
+set -g default-shell "/usr/bin/env bash"
 
 # set the color for the terminal features
 set -g default-terminal "tmux-256color"
