--- a/pkgs/github-copilot-cli/package.json
+++ b/pkgs/github-copilot-cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@github/copilot",
   "description": "GitHub Copilot CLI brings the power of Copilot coding agent directly to your terminal.",
-  "version": "0.0.339",
+  "version": "0.0.349",
   "type": "module",
   "repository": {
     "type": "git",
@@ -30,14 +30,14 @@
     "tree-sitter.wasm",
     "tree-sitter-bash.wasm",
     "tree-sitter-powershell.wasm",
-    "sdk/**/*"
+    "prebuilds/**/*",
+    "sdk/**/*",
+    "worker/**/*"
   ],
   "buildMetadata": {
-    "gitCommit": "66f4dfe"
+    "gitCommit": "3469b3e"
   },
   "dependencies": {
-    "node-pty": "npm:@devm33/node-pty@^1.0.8",
-    "keytar-forked-forked": "^7.10.2",
     "sharp": "^0.34.3"
   }
 }
