--- a/dotfiles/tmux-3.5a/.tmux.conf
+++ b/dotfiles/tmux-3.5a/.tmux.conf
@@ -82,8 +82,6 @@ set-window-option -g pane-base-index 1
 # Ensure window index numbers get reordered on delete.
 set -g renumber-windows on
 
-bind r source-file ~/.tmux.conf \; display-message "~/.config/tmux/.tmux.conf reloaded"
-bind R source-file ~/.tmux.conf \; display-message "   Config successfully reloaded!"
 
 set-window-option -g mouse on
 set -g automatic-rename on
@@ -98,14 +96,11 @@ set -g status-style fg=white,bg=black
 
 set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\"#{=21:pane_title}\" %y-%m-%d %H:%M:%S"
 
+bind r source-file ~/.tmux.conf \; display-message "~/.config/tmux/.tmux.conf reloaded"
+bind R source-file ~/.tmux.conf \; display-message "   Config successfully reloaded!"
+
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-
-# pane splitting
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
 
 # window selection
 bind -r C-h select-window -t :-
@@ -122,6 +117,9 @@ bind C-h resize-pane -L 4
 bind C-j resize-pane -D 4
 bind C-k resize-pane -U 4
 bind C-l resize-pane -R 4
+
+# Keep new panes in the current pane's working directory.
+set -g default-path "#{pane_current_path}"
 
 # Tmux Plugin Manager: https://github.com/tmux-plugins/tpm
 # List of plugins
