fix the horizonal and vertical split creating a pane on the same path as the original pane

--- a/dotfiles/tmux-3.5a/.tmux.conf
+++ b/dotfiles/tmux-3.5a/.tmux.conf
@@ -96,6 +96,9 @@ set -g status-style fg=white,bg=black
 
 set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\"#{=21:pane_title}\" %y-%m-%d %H:%M:%S"
 
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 bind r source-file ~/.tmux.conf \; display-message "~/.config/tmux/.tmux.conf reloaded"
 bind R source-file ~/.tmux.conf \; display-message "   Config successfully reloaded!"
 
@@ -118,8 +121,6 @@ bind C-j resize-pane -D 4
 bind C-k resize-pane -U 4
 bind C-l resize-pane -R 4
 
-# Keep new panes in the current pane's working directory.
-set -g default-path "#{pane_current_path}"
 
 # Tmux Plugin Manager: https://github.com/tmux-plugins/tpm
 # List of plugins
