--- a/dotfiles/fastfetch-2.58.0/.config/fastfetch/config.jsonc
+++ b/dotfiles/fastfetch-2.58.0/.config/fastfetch/config.jsonc
@@ -1,46 +1,38 @@
 {
-  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-  "logo": {
-    "type": "small",
-    "padding": {
-      "top": 2,
-      "left": 2
-    }
-  },
-  "display": {
-    "separator": " ➜  "
-  },
+  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/master/doc/json_schema.json",
   "modules": [
     {
       "type": "custom",
       "format": "\u001b[34mSorry, I declare NixOS, actually.\u001b[0m"
     },
+    "separator",
+    "title",
+    "os",
+    "host",
+    "kernel",
+    "uptime",
+    "packages",
+    "shell",
+    "display",
+    "de",
+    "wm",
+    "wmtheme",
+    "theme",
+    "icons",
+    "font",
+    "cursor",
+    "terminal",
+    "terminalfont",
+    "cpu",
+    "gpu",
+    "memory",
+    "swap",
+    "disk",
+    "localip",
+    "battery",
+    "poweradapter",
+    "locale",
     "break",
-    {
-      "type": "os",
-      "key": "  System",
-      "keyColor": "blue"
-    },
-    {
-      "type": "kernel",
-      "key": "  Kernel",
-      "keyColor": "blue"
-    },
-    {
-      "type": "packages",
-      "key": "  Store ",
-      "keyColor": "blue"
-    },
-    {
-      "type": "command",
-      "key": "  Generations",
-      "keyColor": "blue",
-      "text": "ls /nix/var/nix/profiles/system-*-link | wc -l"
-    },
-    "break",
-    {
-      "type": "colors",
-      "symbol": "circle"
-    }
+    // "colors"
   ]
 }
